<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="651dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tvtitle"
            android:textColor="#FF5722"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="528dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout1">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rbVIP"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:checked="true"
                android:text="@string/rbVIP" />

            <RadioButton
                android:id="@+id/rbPalco"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/rbPalco" />

            <RadioButton
                android:id="@+id/rbLateral"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/rbLateral" />

            <RadioButton
                android:id="@+id/rbGeneral"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/rbGeneral" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="458dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout2">

        <EditText
            android:id="@+id/etPersonas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/etPersonas"
            android:inputType="textPersonName"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="387dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout3">

        <TextView
            android:id="@+id/tvValorxP"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/tvValorxP"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout5"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="297dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout4">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rbAguardiente"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:checked="true"
                android:text="@string/rbAguardiente" />

            <RadioButton
                android:id="@+id/rbRon"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/rbRon" />

            <RadioButton
                android:id="@+id/rbWhiskey"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/rbWhiskey" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout6"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/LinearLayou7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout5">


        <EditText
            android:id="@+id/etBotellas"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/etBotellas"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvValorBotellas"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/tvValorBotellas" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayou7"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="167dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout6">

        <CheckBox
            android:id="@+id/cbPropina"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/cbPropinas"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayou8"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="117dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayou7">

        <TextView
            android:id="@+id/tvValorPropina"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tvValorProp"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout9"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="66dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayou8">

        <Button
            android:id="@+id/btCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calcularTotal"
            android:text="@string/btCalcular"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayou10"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout9">

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/tvTotal"
            android:textColorHint="#9C27B0"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>